syntax = "proto3"; // version

option java_multiple_files = true;
option java_package = "billing";


service BillingService {
  rpc CreateBillingAccount(BillingRequest) returns (BillingResponse);
}

message BillingRequest {
    string patientid = 1;
    string name = 2;
    string email = 3;
}

message BillingResponse{
    string accountId = 1;
    string status = 2;
}